Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-6713

Failed to increase reservation at Sorter

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.10.0, Impala 2.11.0, Impala 2.12.0
    • None
    • Backend

    Description

      E0321 17:12:01.525718 17305 substitute.cc:41] strings::Substitute format string invalid: asked for "$2", but only 2 args were given. Full format string was: "Unexpected error trying to reserve $0 bytes for a sorted run: $2".
      I0321 17:12:01.538334 17305 status.cc:128]
      @ 0x7ff90612e98a impala::Status::Status()
      @ 0x7ff908acd9e4 impala::Sorter::Run::Init()
      @ 0x7ff908ace9e9 impala::Sorter::Open()
      @ 0x7ff9086c5a1f impala::PartialSortNode::GetNext()
      @ 0x7ff908a8fda2 impala::FragmentInstanceState::ExecInternal()
      @ 0x7ff908a928ff impala::FragmentInstanceState::Exec()
      @ 0x7ff908aabb8a impala::QueryState::ExecFInstance()
      @ 0x7ff909775a2f impala::Thread::SuperviseThread()
      @ 0x7ff9097762ba boost::detail::thread_data<>::run()
      @ 0x7ff905cf20f5 thread_proxy

       

      https://github.com/apache/impala/blob/1d38c584aef2d0f852af8ee659157d00eb3b061a/be/src/runtime/sorter.cc#L637

      Attachments

        1. table schema.txt
          1.0 kB
          yyzzjj
        2. query-impala-26340.csv
          25.13 MB
          yyzzjj
        3. IMPALA-6713.zip
          24 kB
          Rodion Myronov

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            zzjj yyzzjj
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: