IMPALA-6713: Fix format string error in Sorter

This change fixes a format string which incorrectly used
$2 instead of $1 when there are only two arguments to the
format string.

Change-Id: Icdaa781ced755c896cdc9a1fff690811a59e0492
Reviewed-on: http://gerrit.cloudera.org:8080/9740
Reviewed-by: Sailesh Mukil <sailesh@cloudera.com>
Tested-by: Impala Public Jenkins